# calculator

./: CMakeLists.txt  README.md
src/: Calculator.cpp  Calculator.h  Calculator_init.cpp  main.cpp
src/cpp_back/: calc.hpp  calculate.cpp  inf_to_post.cpp  parser.cpp
src/tests/: calc_test.cpp
